--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "atom": ">=1.0.0 <2.0.0"
   },
   "dependencies": {
+    "async-polling": "^0.2.1",
     "atom-message-panel": "^1.2.4",
     "jquery": "^2.2.3",
-    "underscore": "^1.8.3"
+    "nodeutil": "^0.1.0",
+    "underscore": "^1.8.3",
+    "xml2js": "^0.4.16"
   }
 }
