--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,7 @@ notifications:
     on_success: never
     on_failure: change
 
+env:
+  - APM_TEST_PACKAGES="jquery underscore xml2js atom-message-panel"
+
 script: 'curl -s https://raw.githubusercontent.com/atom/ci/master/build-package.sh | sh'
