--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ notifications:
     on_success: never
     on_failure: change
 
+addons:
+    code_climate:
+        repo_token: 77eb7af12cbe33c0d4519a17e7ab7e1f202957a5
+
 env:
   - APM_TEST_PACKAGES="jquery underscore xml2js atom-message-panel"
 
