--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "jquery": "^2.2.3",
     "underscore": "^1.8.3",
     "xml2js": "^0.4.16"
+  },
+  "devDependencies": {
+    "codeclimate-test-reporter": "^0.3.1"
   }
 }
