--- a/package.json
+++ b/package.json
@@ -22,5 +22,13 @@
     },
     "scripts": {
         "test": "istanbul cover node_modules/jasmine-focused/bin/jasmine-focused spec && jshint lib/atom-maven.js lib/common.js lib/file-utils.js lib/maven-utils.js lib/pom-factory.js lib/pom-registry.js lib/pom.js lib/ui-utils.js lib/workspace.js"
+    },
+    "standard": {
+        "globals": [
+            "atom",
+            "define",
+            "it",
+            "beforeEach"
+        ]
     }
 }
