--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -14,11 +14,11 @@ engines:
     enabled: true
 ratings:
   paths:
-  - "**.inc"
-  - "**.js"
-  - "**.jsx"
-  - "**.module"
-  - "**.php"
-  - "**.py"
-  - "**.rb"
+  - "**/**.inc"
+  - "**/**.js"
+  - "**/**.jsx"
+  - "**/**.module"
+  - "**/**.php"
+  - "**/**.py"
+  - "**/**.rb"
 exclude_paths: []
