--- a/package.json
+++ b/package.json
@@ -31,12 +31,13 @@
         "coverage": "istanbul cover -v --include-all-sources node_modules/jasmine-focused/bin/jasmine-focused -R spec",
         "quality": "jshint lib/atom-maven.js lib/common.js lib/file-utils.js lib/maven-utils.js lib/pom-factory.js lib/pom-registry.js lib/pom.js lib/ui-utils.js lib/workspace.js"
     },
-    "standard": {
+    "happiness": {
         "globals": [
             "atom",
             "define",
             "it",
-            "beforeEach"
+            "beforeEach",
+            "$"
         ]
     }
 }
