--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     },
     "dependencies": {
         "atom-message-panel": "^1.2.4",
-        "babel": "^6.5.2",
         "jquery": "^2.2.3",
         "underscore": "^1.8.3",
         "xml2js": "^0.4.16"
@@ -22,7 +21,7 @@
         "babel-core": "^6.3.17",
         "babel-polyfill": "^6.3.14",
         "babel-preset-es2015": "^6.3.13",
-        "istanbul": "gotwarlost/istanbul.git#source-map",
+        "istanbul": "^1.0.0-alpha.2",
         "jasmine-focused": "^1.0.7",
         "jasmine-node": "^1.14.5",
         "node-babel": "^0.1.2"
@@ -34,8 +33,10 @@
     "happiness": {
         "globals": [
             "atom",
-            "define",
             "it",
+            "spyOn",
+            "describe",
+            "expect",
             "beforeEach",
             "$"
         ]
