--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,10 @@ notifications:
 script:
     - 'curl -s https://raw.githubusercontent.com/atom/ci/master/build-package.sh | sh'
     - npm run quality
-    env:
-        - COVERAGE=true
-    - npm run coverage
 
-after_script:
+after_success:
+    env: COVERAGE=true
+
+after_script:    
+  - npm run coverage
   - codeclimate-test-reporter < coverage/lcov.info
