--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: objective-c
 
 before_install:
     - npm install -g istanbul
+    - npm install -g jshint
 
 notifications:
   email:
@@ -15,6 +16,6 @@ script:
 after_success:
     env: COVERAGE=true
 
-after_script:    
+after_script:
   - npm run coverage
   - codeclimate-test-reporter < coverage/lcov.info
