--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ before_install:
     - npm install -g codeclimate-test-reporter
 
 env:
-    - COVERAGE=true
     - COVERAGE=false
+    - COVERAGE=true
 
 notifications:
   email:
@@ -15,16 +15,4 @@ notifications:
     on_failure: change
 
 script:
-    - 'curl -s https://raw.githubusercontent.com/atom/ci/master/build-package.sh | sh'
-    - npm run quality
-
-after_script:
-  - npm run coverage
-  - codeclimate-test-reporter < coverage/lcov.info
-
-matrix:
-    exclude:
-        - env: COVERAGE=true
-          script: 'curl -s https://raw.githubusercontent.com/atom/ci/master/build-package.sh | sh'
-        - env: COVERAGE=true
-          script: npm run quality
+    - './test.sh'
