--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-core": "^6.3.17",
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
+    "babel-register": "^6.9.0",
     "codeclimate-test-reporter": "^0.3.1",
     "istanbul": "^1.0.0-alpha.2",
     "jasmine-focused": "^1.0.7",
@@ -32,7 +33,7 @@
     "node-babel": "^0.1.2"
   },
   "scripts": {
-    "coverage": "istanbul cover -v --include-all-sources node_modules/jasmine-focused/bin/jasmine-focused -R spec",
+    "coverage": "istanbul cover -v --include-all-sources -x **/atom/** node_modules/jasmine-focused/bin/jasmine-focused -R spec",
     "quality": "jshint lib/atom-maven.js lib/common.js lib/file-utils.js lib/maven-utils.js lib/pom-factory.js lib/pom-registry.js lib/pom.js lib/ui-utils.js lib/workspace.js"
   },
   "happiness": {
