--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "dependencies": {
         "atom-message-panel": "^1.2.4",
         "jquery": "^2.2.3",
-        "log4js": "^0.6.36",
         "underscore": "^1.8.3",
         "xml2js": "^0.4.16"
     },
@@ -24,15 +23,12 @@
         "babel": "^6.5.2",
         "babel-cli": "^6.9.0",
         "babel-core": "^6.3.17",
-        "babel-polyfill": "^6.3.14",
         "babel-preset-es2015": "^6.3.13",
         "babel-register": "^6.9.0",
         "codeclimate-test-reporter": "^0.3.1",
         "happiness": "^6.0.7",
         "istanbul": "^1.0.0-alpha.2",
-        "jasmine-focused": "^1.0.7",
-        "jasmine-node": "^1.14.5",
-        "node-babel": "^0.1.2"
+        "jasmine-focused": "^1.0.7"
     },
     "scripts": {
         "coverage": "istanbul cover -v --include-all-sources -x **/atom/** node_modules/jasmine-focused/bin/jasmine-focused -R spec",
