--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ before_install:
     - npm install -g jasmine-focused
     - npm install -g jshint
     - npm install -g codeclimate-test-reporter
+    - npm install -g codacy-coverage
 
 env:
     - COVERAGE=false
