--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "jasmine-focused": "^1.0.7"
     },
     "scripts": {
+        "test": "jasmine-focused spec",
         "coverage": "istanbul cover -v --include-all-sources -x **/atom/** node_modules/jasmine-focused/bin/jasmine-focused -R spec",
         "quality": "jshint lib/atom-maven.js lib/common.js lib/file-utils.js lib/maven-utils.js lib/pom-factory.js lib/pom-registry.js lib/pom.js lib/ui-utils.js lib/workspace.js"
     },
