--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     },
     "scripts": {
         "test": "node ./node_modules/jasmine-focused/bin/jasmine-focused spec",
-        "coverage": "node ./node_modules/istanbul/bin/istanbul cover -v --include-all-sources -x **/atom/** node_modules/jasmine-focused/bin/jasmine-focused -R spec",
+        "coverage": "node ./node_modules/istanbul/lib/cli.js cover -v --include-all-sources -x **/atom/** node_modules/jasmine-focused/bin/jasmine-focused -R spec",
         "quality": "node ./node_modules/jshint/bin/jshint lib/atom-maven.js lib/common.js lib/file-utils.js lib/maven-utils.js lib/pom-factory.js lib/pom-registry.js lib/pom.js lib/ui-utils.js lib/workspace.js"
     },
     "standard": {
