--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
-language: objective-c
+language: node_js
+
+node_js:
+    - "6.1"
 
 before_install:
     - npm install -g codeclimate-test-reporter
