--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "atom": ">=1.0.0 <2.0.0"
   },
   "dependencies": {
+    "async": "^2.5.0",
     "atom-message-panel": "^1.2.4",
     "jquery": "^3.0.0",
     "node-maven-api": "^2.0.2",
